--- a/Hangman Mk.I/Hangman Mk.I/Properties/Resources.resx
+++ b/Hangman Mk.I/Hangman Mk.I/Properties/Resources.resx
@@ -175,6 +175,9 @@
   <data name="danish" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\danish.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
+  <data name="debug" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\debug.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="dutch" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dutch.txt;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
   </data>
